--- a/w/wh/wha/whatifsports.com.html
+++ b/w/wh/wha/whatifsports.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whatifsports.com privacy policy that was archived on 2001-08-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010805220100id_/http%3A//www.whatifsports.com/locker/privacy.shtm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whatifsports.com privacy policy that was archived on 2002-04-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020409050718id_/http%3A//whatifsports.com/locker/privacy.shtm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso8859-1">
@@ -10,7 +10,7 @@ fantasy sports, game, manage team, fantasy leagues, sim, simulation game, free g
 <link rel="stylesheet" type="text/css" href="../global.css">
 </head>
 
-<body background="../images/bkg.gif" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0">
+<body class="wm" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0">
 <script language="javascript">
 //<!--
 
@@ -92,27 +92,33 @@ else if (document.all) {
 //-->
 </script>
 
+<style>
+  table.mb {
+		border: solid #ffffff 1px;
+	}	
+</style>
+
 <table border="0" width="100%" cellpadding="0" cellspacing="1">
 	<tbody><tr>
-	<td rowspan="2" bgcolor="#FF6028" width="206"><a href="../locker/default.asp"><img border="0" src="../images/brand/wiscom.gif" width="206" height="28"></a></td>
-	<td bgcolor="Black" colspan="2" align="center"><img src="../images/brand/tagline.gif" height="20" width="580"></td></tr>
+	<td rowspan="2" bgcolor="#C13F45" width="206"><a href="../locker/default.asp"><img border="0" src="../images/brand/wiscom.gif" width="204" height="36"></a></td>
+	<td bgcolor="Black" align="center"><img src="../images/brand/tagline.gif" height="20" width="580"></td>
+	</tr>
   <tr>
-		
-    <!--<td rowspan="2" width="61"><a href="../locker/default.asp"><img border="0" src="../images/wislogo.gif" width="61" height="60"></a></td>-->
-        <td height="30" bgcolor="#006098" nowrap="" width="100%">&nbsp;<font color="palegoldenrod">
-    <a onmouseover="sd('home',event)" onmouseout="tm();" class="menu" href="../locker/default.asp">Home</a>
-		&nbsp;•&nbsp;<a onmouseover="sd('simleagues',event)" onmouseout="tm();" class="menu" href="../locker/simleagues.shtm">SimLeagues</a>
-		&nbsp;•&nbsp;<a onmouseover="sd('sims',event)" onmouseout="tm();" class="menu" href="../locker/simulations.shtm">Simulations</a>
-		&nbsp;•&nbsp;<a class="menu" href="../forums/default.asp">Forums</a>
-		&nbsp;•&nbsp;<a onmouseover="sd('account',event)" onmouseout="tm();" class="menu" href="../locker/myaccount.shtm">My Account</a>
-		&nbsp;•&nbsp;<a class="menu" href="../locker/logout.asp">Logout</a></font>
-		</td>
-    <!--<td width="234" height="60" nowrap rowspan="2" align="right">    <a href="../mlb-l/default.shtm"><IMG alt="SimLeagues are forming now!" border=0  width=234 height=60 src="../images/ads/simad.gif"></a></td>-->
+    <td height="30" bgcolor="#006098" nowrap="" width="100%">&nbsp;<font color="palegoldenrod">
+		<a onmouseover="sd('home',event)" onmouseout="tm();" class="menu" href="../locker/default.asp">Home</a>&nbsp;•&nbsp;
+		<a onmouseover="sd('simleagues',event)" onmouseout="tm();" class="menu" href="../locker/simleagues.shtm">SimLeagues</a>&nbsp;•&nbsp;
+		<a onmouseover="sd('simtourneys',event)" onmouseout="tm();" class="menu" href="../locker/simtourneys.shtm">SimTourneys</a>&nbsp;•&nbsp;
+		<a onmouseover="sd('sims',event)" onmouseout="tm();" class="menu" href="../locker/simulations.shtm">Simulations</a>&nbsp;•&nbsp;
+		<a class="menu" href="../forums/default.asp">Forums</a>&nbsp;•&nbsp;
+		<a onmouseover="sd('account',event)" onmouseout="tm();" class="menu" href="../locker/myaccount.shtm">My Account</a>&nbsp;•&nbsp;
+		<a class="menu" href="../locker/logout.asp">Logout</a></font></td>
   </tr>
 </tbody></table>
-		<div id="home" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:215px;visibility:hidden;BORDER-TOP: white 1px solid;">
-			<table bgcolor="#006098" border="0" width="145" cellspacing="0" cellpadding="2">
+
+		<div id="home" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:215px;visibility:hidden;">
+			<table class="mb" bgcolor="#006098" border="0" width="125" cellspacing="0" cellpadding="2">
 				<tbody><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/join.asp">Join</a></td></tr>
+				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../giftcert/default.shtm">Gift Certificates</a></td></tr>
 				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/pollresults.asp">Poll Results</a></td></tr>
 				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/contact.shtm">Contact Us</a></td></tr>
 				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/advertise.shtm">Advertise</a></td></tr>
@@ -120,31 +126,40 @@ else if (document.all) {
 			</tbody></table>
 		</div>
 
-		<div id="simleagues" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:264px;visibility:hidden;BORDER-TOP: white 1px solid;">
-			<table bgcolor="#006098" border="0" width="165" cellspacing="0" cellpadding="2">
-				<tbody><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../mlb-l/default.shtm">Baseball SimLeagues</a></td></tr>
-				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nba-l/default.shtm">Basketball SimLeagues</a></td></tr>
+		<div id="simleagues" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:264px;visibility:hidden;">
+			<table class="mb" bgcolor="#006098" border="0" width="115" cellspacing="0" cellpadding="2">
+				<tbody><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../mlb-l/default.shtm">Baseball</a></td></tr>
+				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nba-l/default.shtm">Basketball</a></td></tr>
+				<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nfl-l/default.shtm">Football</a></td></tr>				
 			</tbody></table>
 		</div>
 
-		<div id="sims" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:350px;visibility:hidden;BORDER-TOP: white 1px solid;">
-			<table bgcolor="#006098" border="0" width="145" cellspacing="0" cellpadding="2">
+		<div id="simtourneys" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:350px;visibility:hidden;">
+			<table class="mb" bgcolor="#006098" border="0" width="115" cellspacing="0" cellpadding="2">
+				<tbody><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../mlb-t/default.shtm">Baseball</a></td></tr>
+				<!--<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nba-t/default.shtm">Basketball</a></td></tr>-->
+				<!--<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nfl-t/default.shtm">Football</a></td></tr>-->
+			</tbody></table>
+		</div>
+		
+		<div id="sims" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:436px;visibility:hidden;">
+			<table class="mb" bgcolor="#006098" border="0" width="145" cellspacing="0" cellpadding="2">
 				<tbody><tr>
 					</tr><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../mlb/default.asp">Baseball</a></td></tr>
-					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nba/default.asp">NBA Basketball</a></td></tr>
-					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../ncaab/default.asp">NCAA Basketball</a></td></tr>
-
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nba/default.asp">Basketball (NBA)</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../ncaab/default.asp">Basketball (NCAA)</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../nfl/default.asp">Football</a></td></tr>
 			</tbody></table>
 		</div>
 
-		<div id="account" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:490px;visibility:hidden;BORDER-TOP: white 1px solid;">
-			<table bgcolor="#006098" border="0" width="145" cellspacing="0" cellpadding="2">
+		<div id="account" onmouseover="ct();" onmouseout="tm();" style="position:absolute;left:560px;visibility:hidden;">
+			<table class="mb" bgcolor="#006098" border="0" width="145" cellspacing="0" cellpadding="2">
 				<tbody><tr>
-					</tr><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/join.asp?update=1">Information</a></td></tr>
-					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/buddies.asp">Buddies</a></td></tr>
-					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/fav_teams.asp">Favorite Teams</a></td></tr>
-					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/saved_games.asp">Saved Games</a></td></tr>
-
+					</tr><tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/join.asp?update=1">My Information</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/buddies.asp">My Buddies</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/fav_teams.asp">My Favorite Teams</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../locker/saved_games.asp">My Saved Games</a></td></tr>
+					<tr><td>&nbsp;<a onmouseover="ct();" onmouseout="tm();" class="menu" href="../sitemail/sitemail.asp">My Mailbox</a></td></tr>
 			</tbody></table>
 		</div>
 
@@ -153,7 +168,7 @@ else if (document.all) {
 <tbody><tr>
 <td width="10">&nbsp;</td>
 <td>
-<center><b><h2>WhatIfSports.com Statement of Privacy</h2></b></center>
+<p align="center" class="wish2">WhatIfSports Statement of Privacy</p>
 
 <p>The Internet is an amazing tool. It has the power to change the way we live, and we're starting to see that potential today. With only a few mouse-clicks, you can follow the news, look up facts, buy goods and services, and communicate with others from around the world--even people you might never have met.  It's important to
 WhatIfSports.com to help its customers retain their privacy when they take advantage of all the Internet has to offer.</p>
@@ -273,24 +288,32 @@ WhatIfSports.com.  The Statement of Privacy does not cover this type of transfer
 </tr>
 </tbody></table>
 <!-- START FOOTER TABLE -->
-<center>
+
 <hr color="#d3d3d3">
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-	<tbody><tr>
-		<td width="35%">
-			<font class="smallbody">
-			<a class="copyright" href="../locker/contact.shtm">© 2001 WhatIfSports.com, Inc.</a></font></td>
-		<td width="65%" align="right">
-			<font class="smallbody">
-			<a class="copyright" href="../locker/terms.shtm">Terms of Use</a>&nbsp;
-			<a class="copyright" href="../help/techsupport.asp">Technical Support</a>&nbsp;
-			<a class="copyright" href="../locker/privacy.shtm">Privacy Statement</a></font></td>
+  <tbody><tr>
+    <td colspan="2" class="smallbody" align="center">
+    <a href="../locker/default.asp">Home</a>&nbsp;•
+    &nbsp;<a href="../locker/simleagues.shtm">SimLeagues</a>&nbsp;•
+    &nbsp;<a href="../locker/simtourneys.shtm">SimTourneys</a>&nbsp;•
+    &nbsp;<a href="../locker/simulations.shtm">Simulations</a>&nbsp;•
+    &nbsp;<a href="../forums/default.asp">Forums</a>&nbsp;•
+    &nbsp;<a href="../locker/myaccount.shtm">My Account</a>&nbsp;•
+    &nbsp;<a href="../locker/logout.asp">Logout</a></td>
+  </tr>
+
+	<tr>
+		<td width="45%" class="smallbody">
+			<a class="copyright" href="../locker/contact.shtm" target="_blank">© 1999-2002 WhatIfSports.com, Inc.<br>All rights reserved.</a></td>
+		<td valign="top" width="55%" align="right" class="smallbody">
+			<a class="copyright" href="../locker/terms.shtm" target="_blank">[Terms of Use]</a>&nbsp;
+			<a class="copyright" href="../help/techsupport.asp" target="_blank">[Customer Support]</a>&nbsp;
+			<a class="copyright" href="../locker/privacy.shtm" target="_blank">[Privacy Statement]</a></td>
 	</tr>
 	<tr>
-		<td colspan="2"><font color="#999999" class="smallbody">All rights reserved.</font></td>
+		<td colspan="2" class="smallbody" align="center"><font color="#999999"><br>WhatIfSports, SimLeagues, SimTourneys and the WhatIfSports logo are registered trademarks of WhatIfSports.com, Inc.</font></td>
 	</tr>
 </tbody></table>
-</center>
 <!-- END FOOTER TABLE -->
 
 
