mphonline.com (archived on 2002-04-09)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;shopping",
  "char_count": 4825,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.42,
  "homepage_snapshot_redirected_domain": "mphonline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020202142606id_/http://www.mphonline.com/welcome/welcome.cfm",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328171342id_/http%3A//mphonline.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mphonline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020409115925id_/http%3A//www.mphonline.com/misc/privacy.cfm",
  "policy_title": "MPHOnline.com",
  "policy_url": "mphonline.com/misc/privacy.cfm",
  "sha1": "98b1866b5419f89cfc7bcef3e3e090464a50dd9f",
  "simhash": 6789345551812747052,
  "simhash_updated": false,
  "site_hostname": "mphonline.com",
  "site_url": "http://mphonline.com",
  "smog": 11.6,
  "strict_updated": true,
  "timestamp": "20020409115925",
  "word_count": 792,
  "year": 2002
}

--- a/m/mp/mph/mphonline.com.html
+++ b/m/mp/mph/mphonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mphonline.com privacy policy that was archived on 2001-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011203150923id_/http%3A//www.mphonline.com/misc/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mphonline.com privacy policy that was archived on 2002-04-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020409115925id_/http%3A//www.mphonline.com/misc/privacy.cfm) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -54,19 +54,15 @@ var x = RandomNumber();
 x = x/2 ;
 
 
-if (x > .44)
+if (x > .375)
 {document.write("<img src='../images/banners/banner.png' border=0>");
 return; 
 }
- if (x > .33)
+ if (x > .25)
 {document.write("<img src='../images/banners/gramediabanner.gif' border=0>");
 return; 
 }
- if (x > .22)
-{document.write("<img src='../images/banners/jingqibanner.gif' border=0>");
-return; 
-}
- if (x > .11)
+ if (x > .125)
 {document.write("<img src='../images/banners/torquebanner.gif' border=0>");
 return; 
 }
@@ -455,8 +451,7 @@ By using this site, you signify your agreement to the <b>MPH Online.com</b> Priv
   Us</font></a> <font face="Verdana">&nbsp;|&nbsp;&nbsp;<a href="http://www.mphonline.com/misc/service.cfm">Corporate 
   Services</a></font></b><font face="Verdana">&nbsp;|&nbsp;</font></font> <font face="Verdana" size="1"><b><a href="http://www.mphonline.com/misc/privacy.cfm">Privacy 
   Policy</a> &nbsp;|&nbsp; <a href="../misc/disclaimer.cfm">Disclaimer</a> &nbsp;|&nbsp; 
-  <a href="../misc/terms.cfm">Terms &amp; Conditions</a> &nbsp;|&nbsp; <a href="../email/index.html">Free 
-  Email</a></b> </font><br>
+  <a href="../misc/terms.cfm">Terms &amp; Conditions</a> &nbsp;</b> </font><br>
   <br>
   <font color="red" size="1" face="Verdana">Your Shopping Experience is best enjoyed 
   with </font><br>
