--- a/p/pr/pro/prosperitybanktx.com.html
+++ b/p/pr/pro/prosperitybanktx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prosperitybanktx.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201214419id_/http%3A//prosperitybanktx.com/Internet_Bank/Net_Bank_Disclosure/Privacy_Policy/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prosperitybanktx.com privacy policy that was archived on 2002-04-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020415041807id_/http%3A//prosperitybanktx.com/Internet_Bank/Net_Bank_Disclosure/Privacy_Policy/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 FINAL//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -12,49 +12,57 @@
 <meta name="KEYWORDS" content="Prosperity Bank, Heritage Bank, First Prosperity Bank, south texas, Texas, banking, home loans, home equity, internet banking, car loans, checking, savings, Cypress, Magnolia, Bellaire, Liberty, Medical Center, Tanglewood, Woodway, Downtown Houston, River Oaks, Cleveland, Wharton, Edna, El Campo, West Columbia, Cuero, Houston, Post Oak, Meyerland, Clear Lake, Webster, Victoria, Bay City, Angleton, East Bernard, Beeville, Mathis, Goliad, loans, financial services, loan, bank">
 </head>
 <body bgcolor="#FFFFCC" link="#0000FF" vlink="#800080" text="#000000" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
-    <table border="0" cellspacing="0" cellpadding="0" width="691" nof="LY">
+    <table border="0" cellspacing="0" cellpadding="0" width="689" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="43" height="120"><img src="../../../clearpixel.gif" width="43" height="1" border="0"></td>
+            <td width="41" height="120"><img src="../../../clearpixel.gif" width="41" height="1" border="0"></td>
             <td width="648" align="LEFT" valign="TOP"><img id="Picture338" height="120" width="648" src="../../../prosperity_logo_smaller.gif" border="0"></td>
         </tr>
     </tbody></table>
-    <table border="0" cellspacing="0" cellpadding="0" width="660" nof="LY">
+    <table border="0" cellspacing="0" cellpadding="0" width="635" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="146" height="14"><img src="../../../clearpixel.gif" width="146" height="1" border="0"></td>
+            <td width="121" height="2"><img src="../../../clearpixel.gif" width="121" height="1" border="0"></td>
+            <td></td>
+        </tr>
+        <tr valign="TOP" align="LEFT">
+            <td height="14"></td>
             <td width="514" align="LEFT" valign="TOP"><img id="Picture290" height="14" width="514" src="../../../ColorfulLineH16-13.gif" border="0" alt="Colorful Line"></td>
         </tr>
     </tbody></table>
     <table border="0" cellspacing="0" cellpadding="0" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="18" height="1"><img src="../../../clearpixel.gif" width="18" height="1" border="0"></td>
+            <td height="4"></td>
+        </tr>
+        <tr valign="TOP" align="LEFT">
+            <td nowrap=""> [<a href="../../../index.html">Prosperity&nbsp;Bank</a>]  [<a href="../../../About_Us/about_us.HTM">About
+Us</a>]  [<a href="../../../Deposit_Products/deposit_products.html">Deposit
+Products</a>]  [<a href="../../../Rates/rates.html">Rates</a>]  [<a href="../../../PRSP/prsp.html">PRSP</a>]  [<a href="../../../Internet_Bank/internet_bank.htm">Internet&nbsp;Bank</a>] </td>
+        </tr>
+    </tbody></table>
+    <table border="0" cellspacing="0" cellpadding="0" width="635" nof="LY">
+        <tbody><tr valign="TOP" align="LEFT">
+            <td width="121" height="2"><img src="../../../clearpixel.gif" width="121" height="1" border="0"></td>
             <td></td>
         </tr>
         <tr valign="TOP" align="LEFT">
-            <td></td>
-            <td nowrap=""> [<a href="../../../index.html">Home&nbsp;Page</a>]  [<a href="../../../About_Us/about_us.HTM">About&nbsp;Us</a>]  [<a href="../../../Deposit_Products/deposit_products.html">Deposit&nbsp;Products</a>]  [<a href="../../../Deposit_Rates/deposit_rates.html">Deposit&nbsp;Rates</a>]  [<a href="../../../Rates/rates.html">Rates</a>]  [<a href="../../../PRSP/prsp.html">PRSP</a>]  [<a href="../../../Internet_Bank/internet_bank.htm">Internet&nbsp;Bank</a>]
-                 </td>
-        </tr>
-    </tbody></table>
-    <table border="0" cellspacing="0" cellpadding="0" width="660" nof="LY">
-        <tbody><tr valign="TOP" align="LEFT">
-            <td width="146" height="14"><img src="../../../clearpixel.gif" width="146" height="1" border="0"></td>
+            <td height="14"></td>
             <td width="514" align="LEFT" valign="TOP"><img id="Picture300" height="14" width="514" src="../../../ColorfulLineH16-13.gif" border="0" alt="Colorful Line"></td>
         </tr>
     </tbody></table>
-    <table border="0" cellspacing="0" cellpadding="0" width="684" nof="LY">
+    <table border="0" cellspacing="0" cellpadding="0" width="639" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="64" height="2"><img src="../../../clearpixel.gif" width="64" height="1" border="0"></td>
+            <td width="19" height="4"><img src="../../../clearpixel.gif" width="19" height="1" border="0"></td>
             <td width="620"><img src="../../../clearpixel.gif" width="620" height="1" border="0"></td>
         </tr>
         <tr valign="TOP" align="LEFT">
             <td></td>
-            <td width="620"><p align="CENTER"><a href="#Privacy"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Privacy </font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT"> |&nbsp; </font><a href="../../../Internet_Bank/Enroll/enroll.html"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Net Bank Application</font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">
-                &nbsp; | </font><a href="../../../Internet_Bank/Net_Bank_Disclosure/net_bank_disclosure.htm"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT"> Net Bank Agreement</font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">&nbsp; |&nbsp;&nbsp;&nbsp; </font><a href="mailto:contactus@prosperitybanktx.com"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Contact Us</font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT"> </font></p></td>
+            <td width="620" bgcolor="#FFFFCC"><p align="CENTER"><a href="#Privacy"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Privacy </font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">
+                 |&nbsp; </font><a href="../../../Internet_Bank/Enroll/enroll.html"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Net Bank Application</font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">&nbsp; | </font><a href="../../../Internet_Bank/Net_Bank_Disclosure/net_bank_disclosure.htm"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT"> Net Bank Agreement
+                </font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">&nbsp; |&nbsp;&nbsp;&nbsp; </font><a href="mailto:contactus@prosperitybanktx.com"><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">Contact Us</font></a><font color="#0000FF" size="-1" face="Arial,Helvetica,Univers,Zurich BT"> </font></p></td>
         </tr>
     </tbody></table>
     <table border="0" cellspacing="0" cellpadding="0" width="608" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="41" height="48"><img src="../../../clearpixel.gif" width="41" height="1" border="0"></td>
+            <td width="41" height="39"><img src="../../../clearpixel.gif" width="41" height="1" border="0"></td>
             <td width="567"><img src="../../../clearpixel.gif" width="567" height="1" border="0"></td>
         </tr>
         <tr valign="TOP" align="LEFT">
@@ -92,14 +100,17 @@
                             The name of your internet service provider<br></font><font color="#000066" face="Wingdings">§ </font><font color="#000066" face="Times New Roman,Times,Times NewRoman">The website that referred you to us (if any)<br>
                             </font><font color="#000066" face="Wingdings">§ </font><font color="#000066" face="Times New Roman,Times,Times NewRoman">The date and time the pages were accessed<br></font><font color="#000066" face="Wingdings">§ 
                             </font><font color="#000066" face="Times New Roman,Times,Times NewRoman">The page or pages you requested</font></p><p><font color="#000066" face="Times New Roman,Times,Times NewRoman">There are instances where you may elect to provide us with personal information.&nbsp; If you fill out one of 
-                            our feedback or request forms or send e-mail, you are transmitting the information that applies to you in the form of a message.&nbsp; This will typically include&nbsp; information like your name, mailing address, email 
-                            address, the kind of request you are making, and any other information&nbsp; necessary to fulfill your request.&nbsp; You only transmit personally identifying&nbsp; information that you enter yourself.&nbsp; This 
+                            our feedback or request forms or send e-mail, you are transmitting the information that applies to you in the form of a message.&nbsp; This will typically include&nbsp; information like your name, mailing address, 
+                            e-mail address, the kind of request you are making, and any other information&nbsp; necessary to fulfill your request.&nbsp; You only transmit personally identifying&nbsp; information that you enter yourself.&nbsp; This 
                             information cannot be collected unless you specifically elect to send it to us.&nbsp; This information is used internally only for the purpose of fulfilling the request or for contacting you directly and is not given or 
                             sold to any other business or organization. </font></p><p><font color="#000066" face="Times New Roman,Times,Times NewRoman">When you submit personally identifying information via one of our feedback or application forms, that information is also encrypted, or scrambled, by your browser before it 
                             is transmitted back to our website.&nbsp; This effectively prevents anyone from intercepting and reading any personal information about you.&nbsp;&nbsp; <b>Note that this encryption does not take place if you send us 
                             e-mail, but only when you use your&nbsp; Web browser with one of our site's forms.</b></font></p><p><font color="#000066" face="Times New Roman,Times,Times NewRoman">The Prosperity Bank<sup>SM</sup> website is not currently targeted or marketed to children.&nbsp; <br><br>
                             Use of Information About You—</font></p><p><font color="#000066" face="Times New Roman,Times,Times NewRoman">Prosperity Bank<sup>SM</sup> reserves its right to disclose financial information to nonaffiliated third party service providers to the fullest extent permitted by law. </font></p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">QUESTIONS?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font><a href="../../../About_Us/about_us.HTM"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">PLEASE CONTACT YOUR&nbsp; LOCAL&nbsp; BANKING CENTER.</font></a><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman"></font></p><p align="CENTER">
-                            &nbsp;</p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">PROSPERITY BANK<sup>SM</sup> –</font></p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">PROSPERITY BANCSHARES<sup>SM</sup></font></p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">&nbsp;JUNE 2001</font></p><p align="CENTER">&nbsp;</p></td>
+                            &nbsp;</p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">PROSPERITY BANK<sup>SM</sup> –</font></p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">PROSPERITY BANCSHARES<sup>SM</sup></font></p><p align="CENTER"><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">&nbsp;JUNE 2001</font></p><p align="CENTER">&nbsp;</p><p align="LEFT"><i><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">Prosperity Bank is chartered under the laws of the State of Texas and by state law is subject to 
+                            regulatory oversight by the Texas Department of Banking.&nbsp; Any consumer wishing to file a complaint against Prosperity Bank should contact the Texas Department of Banking through one of the means indicated below:<br>
+                            <br>In Person or U.S. Mail: 2601 North Lamar Boulevard, Suite 300, Austin Texas 78705-4294 <br>Fax No.: 512-475-1313<br>E-mail: </font></i><a href="mailto:consumer.complaints@banking.state.tx.us"><i><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman">consumer.complaints@banking.state.tx.us</font></i></a><i><font color="#000066" size="-1" face="Times New Roman,Times,Times NewRoman"><br>
+                            Website: www.banking.state.tx.us</font></i></p><p align="CENTER">&nbsp;</p></td>
                     </tr>
                 </tbody></table>
             </td>
@@ -107,13 +118,14 @@
     </tbody></table>
     <table border="0" cellspacing="0" cellpadding="0" nof="LY">
         <tbody><tr valign="TOP" align="LEFT">
-            <td width="14" height="208"><img src="../../../clearpixel.gif" width="14" height="1" border="0"></td>
+            <td width="14" height="14"><img src="../../../clearpixel.gif" width="14" height="1" border="0"></td>
             <td></td>
         </tr>
         <tr valign="TOP" align="LEFT">
             <td></td>
-            <td nowrap=""> [<a href="../../../index.html">Home&nbsp;Page</a>]  [<a href="../../../About_Us/about_us.HTM">About&nbsp;Us</a>]  [<a href="../../../Deposit_Products/deposit_products.html">Deposit&nbsp;Products</a>]  [<a href="../../../Deposit_Rates/deposit_rates.html">Deposit&nbsp;Rates</a>]  [<a href="../../../Rates/rates.html">Rates</a>]  [<a href="../../../PRSP/prsp.html">PRSP</a>]  [<a href="../../../Internet_Bank/internet_bank.htm">Internet&nbsp;Bank</a>]
-                 </td>
+            <td nowrap=""> [<a href="../../../index.html">Prosperity&nbsp;Bank</a>]  [<a href="../../../About_Us/about_us.HTM">About
+Us</a>]  [<a href="../../../Deposit_Products/deposit_products.html">Deposit
+Products</a>]  [<a href="../../../Rates/rates.html">Rates</a>]  [<a href="../../../PRSP/prsp.html">PRSP</a>]  [<a href="../../../Internet_Bank/internet_bank.htm">Internet&nbsp;Bank</a>] </td>
         </tr>
     </tbody></table>
     <table border="0" cellspacing="0" cellpadding="0" width="655" nof="LY">
