--- a/c/cc/ccn/ccnow.com.html
+++ b/c/cc/ccn/ccnow.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the ccnow.com privacy policy that was archived on 2001-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011221205207id_/http%3A//ccnow.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ccnow.com privacy policy that was archived on 2002-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020421170044id_/http%3A//www.ccnow.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>CCNow Privacy Statement</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-  <link rel="stylesheet" type="text/css" href="images/style.css">  
+  <link rel="stylesheet" type="text/css" href="/images/style.css">  
 
 </head>
 
