--- a/e/el/eli/elicense.com.html
+++ b/e/el/eli/elicense.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the elicense.com privacy policy that was archived on 2001-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011020103853id_/http%3A//elicense.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the elicense.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601101355id_/http%3A//elicense.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>ViaTech Technologies, Inc. - Privacy Policy</title>
@@ -22,13 +22,16 @@
 <td>
 	<table cellpadding="0" cellspacing="0">
 	<tbody><tr>
+	<td><img src="/images/pixel.gif" width="17" height="1" border="0" alt=""></td>
+	<td><a href="/what/services.asp"><img src="/images/topbar/services.gif" width="53" height="11" border="0" alt="Services"></a></td>
+	<td><img src="/images/pixel.gif" width="17" height="1" border="0" alt=""></td>
 	<td><a href="/news.asp"><img src="/images/topbar/news.gif" width="38" height="11" border="0" alt="News"></a></td>
-	<td><img src="/images/pixel.gif" width="20" height="1" border="0" alt=""></td>
-	<td><a href="/contact.asp"><img src="/images/topbar/contact.gif" width="88" height="11" border="0" alt="Contact ViaTech"></a></td>
-	<td><img src="/images/pixel.gif" width="19" height="1" border="0" alt=""></td>
+	<td><img src="/images/pixel.gif" width="17" height="1" border="0" alt=""></td>
+	<td><a href="/contact.asp"><img src="/images/topbar/contact.gif" width="87" height="11" border="0" alt="Contact Us"></a></td>
+	<td><img src="/images/pixel.gif" width="16" height="1" border="0" alt=""></td>
 	<td><a href="/sitemap.asp"><img src="/images/topbar/sitemap.gif" width="53" height="11" border="0" alt="Site Map"></a></td>
-	<td><img src="/images/pixel.gif" width="19" height="1" border="0" alt=""></td>
-	<td><a href="/investors.asp"><img src="/images/topbar/investorrelations.gif" width="100" height="11" border="0" alt="Investor Relations"></a></td>
+	<!-- td><img src="/images/pixel.gif" width="19" height="1" border="0" alt=""></td>
+	<td><a href="/investors.asp"><img src="/images/topbar/investorrelations.gif" width="100" height="11" border="0" alt="Investor Relations"></a></td> -->
 	</tr>
 	</tbody></table>
 
@@ -138,7 +141,7 @@ Natick, MA 01760<br>
 <a href="mailto:webmaster@elicense.com">webmaster@elicense.com</a>
 </p><p>
 </p><hr noshade="">
-<span class="copy">© 2001 ViaTech Technologies, Inc.</span> <a href="/privacy.asp" class="action">Privacy Policy</a> 
+<span class="copy">© 2002 ViaTech Technologies, Inc.</span> <a href="/privacy.asp" class="action">Privacy Policy</a> 
 <br><br>
 </td>
 </tr>
