--- a/r/re/rec/recipeland.com.html
+++ b/r/re/rec/recipeland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the recipeland.com privacy policy that was archived on 2001-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011031162923id_/http%3A//www.recipeland.com/privacy.epl) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the recipeland.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601102102id_/http%3A//www.recipeland.com/privacy.epl) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <style>
@@ -88,15 +88,15 @@ body {font-family : Arial, Helvetica, Univers, sans-serif; font-size: small}
 
 
 </td>
-<td align="right"><img src="/images/random/oa4dx105.jpg" height="95" alt="picture"></td>
+<td align="right"><img src="/images/random/1987396.png" height="95" alt="picture"></td>
 </tr>
 </tbody></table>
 
 
 <table width="100%"><tbody><tr><td></td><td><img src="/myrecipes/space.gif" width="100" height="1"><!-- BEGIN BURST! CODE -->
-<iframe src="http://www.burstnet.com/cgi-bin/ads/cb9056a.cgi/RETURN-CODE/if/6355/" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="125" height="125">
-<A target="_top" HREF="http://www.burstnet.com/ads/cb9056a-map.cgi/nf/6355">
-<IMG SRC="http://www.burstnet.com/cgi-bin/ads/cb9056a.cgi/nf/6355" border="0" width="125" height="125" alt="Please support our sponsor.">
+<iframe src="http://www.burstnet.com/cgi-bin/ads/cb9056a.cgi/RETURN-CODE/if/70641/" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" width="125" height="125">
+<A target="_top" HREF="http://www.burstnet.com/ads/cb9056a-map.cgi/nf/70641">
+<IMG SRC="http://www.burstnet.com/cgi-bin/ads/cb9056a.cgi/nf/70641" border="0" width="125" height="125" alt="Please support our sponsor.">
 </A></iframe>
 <!-- END BURST! CODE --> 
 </td><td>
@@ -212,7 +212,7 @@ RecipeLand works with a third party that serves ads to this site. To find out mo
 
 
 
-<p></p><center>Want to <font color="red">save that recipe</font>? Want <font color="red">more powerfull searching?</font> Try <a href="http://www.recipeland.com/myrecipes/">My Recipes</a></center></font></td></tr></tbody></table><br><br><center><font size="-2">At this very moment there are 48772
+<p></p><center>Want to <font color="red">save that recipe</font>? Want <font color="red">more powerful searching?</font> Try <a href="http://www.recipeland.com/myrecipes/">My Recipes</a></center></font></td></tr></tbody></table><br><br><center><font size="-2">At this very moment there are 48759
  recipes available.</font></center><br><center><font size="-2">recipeland.com <a href="/privacy.epl">Privacy Policy</a>.</font></center><br><center><font size="-3">©Copyright 1996-2001 metro.isp Inc. All rights reserved.</font></center>
 <font color="000000"><a href="http://www.recipeland.com/generated/gen1">gen1</a></font>
 </body></html>
