sltrib.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment;newsandmedia",
  "char_count": 2283,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "sltrib.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020402092728id_/http://www.sltrib.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402092728id_/http%3A//sltrib.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sltrib.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601115028id_/http%3A//www.sltrib.com/help/privacy.asp",
  "policy_title": "Search The Salt Lake Tribune",
  "policy_url": "sltrib.com/help/privacy.asp",
  "sha1": "7593b0c6db66e2481c58048e57e3aa30544a9a8b",
  "simhash": 12931123718266373061,
  "simhash_updated": false,
  "site_hostname": "sltrib.com",
  "site_url": "http://sltrib.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020601115028",
  "word_count": 352,
  "year": 2002
}

--- a/s/sl/slt/sltrib.com.html
+++ b/s/sl/slt/sltrib.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sltrib.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218005420id_/http%3A//www.sltrib.com/help/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sltrib.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601115028id_/http%3A//www.sltrib.com/help/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -48,7 +48,7 @@
           <td width="482" bgcolor="#006699">
 
 <!--*************BANNER AD GOES HERE ********************-->
-<a href="helpads/adredir.asp?url=http://www.tribtalk.com&amp;image=http://www.sltrib.com/help/helpads/tribtalkbnr.gif"><img src="http://www.sltrib.com/help/helpads/tribtalkbnr.gif" alt="Trib Talk - The Salt Lake Tribune's chat and message boards" width="468" height="60" border="0"></a> 
+<a href="helpads/adredir.asp?url=http://www.sltrib.com/help/&amp;image=http://www.sltrib.com/help/helpads/helpbnr.gif"><img src="http://www.sltrib.com/help/helpads/helpbnr.gif" alt="The Salt Lake Tribune's online Help Desk" width="468" height="60" border="0"></a> 
 
    </td></tr>
 	 </tbody></table>
@@ -60,7 +60,7 @@
             <table width="118" border="0" cellpadding="0">
               <tbody><tr> 
                 
-          <td align="center"><b><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Monday, December 17, 2001</font></b></td>
+          <td align="center"><b><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Saturday, June 01, 2002</font></b></td>
               </tr>
               <tr> 
                 <td><a href="SiteMap.asp" onmouseover="BtnRollOver('SiteMap',true)" onmouseout="BtnRollOver('SiteMap',false)"><img src="/Resources/Images/Buttons/SiteMap_1.gif" width="118" height="18" vspace="0" hspace="0" border="0" name="SiteMap" alt="Site Map"></a></td>
@@ -74,7 +74,7 @@
                 <td><a href="index.asp" onmouseover="BtnRollOver('Help',true)" onmouseout="BtnRollOver('Help',false)"><img src="/Resources/Images/Buttons/Help_1.gif" width="118" height="18" vspace="0" hspace="0" border="0" name="Help" alt="Online Help"></a></td>
               </tr>
               <tr> 
-                <td><a href="staff.asp" onmouseover="BtnRollOver('Contact',true)" onmouseout="BtnRollOver('Contact',false)"><img src="/Resources/Images/Buttons/Contact_1.gif" width="118" height="18" vspace="0" hspace="0" border="0" name="Contact" alt="Contact the Staff"></a></td>
+                <td><a href="staff.htm" onmouseover="BtnRollOver('Contact',true)" onmouseout="BtnRollOver('Contact',false)"><img src="/Resources/Images/Buttons/Contact_1.gif" width="118" height="18" vspace="0" hspace="0" border="0" name="Contact" alt="Contact the Staff"></a></td>
               </tr>
               <tr> 
                 <td><a href="/links" onmouseover="BtnRollOver('Features',true)" onmouseout="BtnRollOver('Features',false)"><img src="/Resources/Images/Buttons/Features_1.gif" width="118" height="18" vspace="0" hspace="0" border="0" name="Features" alt="Special Features"></a></td>
