--- a/s/se/sec/secumd.org.html
+++ b/s/se/sec/secumd.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the secumd.org privacy policy that was archived on 2001-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011203113211id_/http%3A//www.secumd.org/html/aboutus/privacystatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the secumd.org privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601121431id_/http%3A//www.secumd.org/html/aboutus/privacystatement.htm) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=ISO-8859-1">
@@ -7,7 +7,11 @@
 		<meta name="description" content="Take advantage of membership in SECU, the largest Maryland credit union! We offer 60-second on-line loan approval, free checking, Internet home banking and much more.">
 		<title>SECU Credit Union | About Us, Privacy Statement</title>
 		<link rel="stylesheet" href="../../stylesheets/secu.css">
-		<script language="JavaScript" type="text/javascript">
+		<script language="javascript">
+self.name = "main"
+</script>
+
+<script language="JavaScript" type="text/javascript">
 <!--
 
 if(window.event + "" == "undefined") event = null;
@@ -67,11 +71,15 @@ HM_PG_NSFontOver = true;
 //-->
 </script>
 
-<script language="JavaScript1.2" src="http://63.111.49.69/html/HM_Loader.js" type="text/javascript"></script>
+<script language="JavaScript1.2" src="http://164.109.176.83/html/HM_Loader.js" type="text/javascript"></script>
 
 	</head>
 
+	
+	
+
 	<body bgcolor="#ffffff" background="../../images/lowerlevel/bg_home_2.gif" leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" link="#009999" alink="#009999" text="black" vlink="#666666">
+
 
 		<table border="0" cellpadding="0" cellspacing="0" width="760">
 			<tbody><tr>
@@ -82,7 +90,7 @@ HM_PG_NSFontOver = true;
 							<td colspan="2" background="../../images/lowerlevel/top1.jpg" class="textlinks" valign="middle" height="25"><img src="../../images/home/spacer.gif" width="25" height="25" border="0"></td>
 						</tr>
 						<tr>
-							<td colspan="2"><a href="../../html/index/index.htm"><img src="../../images/lowerlevel/top2.gif" width="262" height="70" border="0" alt="SECU Credit Union"></a><img src="../../images/lowerlevel/top3_banner.jpg" width="266" height="70" border="0"><a href="../../html/bankingservices/loans_auto.htm"><img src="../../images/lowerlevel/Banner_AutoLoans.gif" width="188" height="70" border="0"></a></td>
+							<td colspan="2"><a href="../../html/index/index.htm"><img src="../../images/lowerlevel/top2.gif" width="262" height="70" border="0" alt="SECU Credit Union"></a><img src="../../images/lowerlevel/top3_banner.jpg" width="217" height="70" border="0"><a href="http://www.secumd.org/html/bankingservices/loans_homeequity.htm"><img src="../../images/lowerlevel/animrev.gif" width="221" height="70" border="0"></a></td>
 						</tr>
 					</tbody></table>
 				</td>
@@ -151,7 +159,8 @@ HM_PG_NSFontOver = true;
 <p><b>How SECU Protects Your Information</b></p>
 <p>We restrict access to nonpublic personal information about you to those employees who have a specific business purpose in utilizing your data. Our employees are trained in the importance of maintaining confidentiality and member privacy. We maintain physical, electronic, and procedural safeguards that comply with federal regulations and leading industry practices to safeguard your nonpublic personal information.</p>
 <p><b>SECU's Right to Amend</b></p>
-<p>SECU reserves the right to amend this disclosure at any time without prior notice. This disclosure amends existing agreements that the Credit Union has with you.</p><!-- content ends here -->
+<p>SECU reserves the right to amend this disclosure at any time without prior notice. This disclosure amends existing agreements that the Credit Union has with you.</p>
+<!-- content ends here -->
 															
 															</td>
 																<td width="10" valign="top"><img src="../../images/lowerlevel/spacer.gif" width="10" height="10" border="0"></td>
