conferencealerts.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1560,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 8.63,
  "homepage_snapshot_redirected_domain": "conferencealerts.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331120739id_/http://www.conferencealerts.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331120739id_/http%3A//conferencealerts.com",
  "interval": "2002_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "conferencealerts.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601122219id_/http%3A//www.conferencealerts.com/priv.htm",
  "policy_title": "",
  "policy_url": "conferencealerts.com/priv.htm",
  "sha1": "134748eedd7a248490c9816f5f2f4b2c7747049a",
  "simhash": 10048091739165489063,
  "simhash_updated": false,
  "site_hostname": "conferencealerts.com",
  "site_url": "http://conferencealerts.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020601122219",
  "word_count": 250,
  "year": 2002
}

--- a/c/co/con/conferencealerts.com.html
+++ b/c/co/con/conferencealerts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the conferencealerts.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212171711id_/http%3A//conferencealerts.com/priv.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the conferencealerts.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601122219id_/http%3A//www.conferencealerts.com/priv.htm) for the most accurate reproduction.-->
 
 <html><head>
 </head>
