cyberastro.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 13175,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.52,
  "homepage_snapshot_redirected_domain": "cyberastro.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331123411id_/http://www.cyberastro.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331123411id_/http%3A//cyberastro.com",
  "interval": "2002_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cyberastro.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601145401id_/http%3A//www.cyberastro.com/pubdoc/privacy.asp",
  "policy_title": "CyberAstro.com - Vedic Astrology for the new Millennium",
  "policy_url": "cyberastro.com/pubdoc/privacy.asp",
  "sha1": "fa74cedda7f7d91480ac364ec54d9406d9c07c26",
  "simhash": 10673016436635818289,
  "simhash_updated": true,
  "site_hostname": "cyberastro.com",
  "site_url": "http://cyberastro.com",
  "smog": 13.97,
  "strict_updated": true,
  "timestamp": "20020601145401",
  "word_count": 2144,
  "year": 2002
}

--- a/c/cy/cyb/cyberastro.com.html
+++ b/c/cy/cyb/cyberastro.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cyberastro.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201041029id_/http%3A//www.cyberastro.com/pubdoc/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cyberastro.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601145401id_/http%3A//www.cyberastro.com/pubdoc/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>CyberAstro.com - Vedic Astrology for the new Millennium</title>
@@ -25,7 +25,7 @@
 <script language="JavaScript">
 var bnum=new Number(Math.floor(99999999 * Math.random())+1);
 document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + bnum + " target=_blank><IMG SRC=http://servedby.advertising.com/size=468060/site=180/bnum=" + bnum + "/bins=1/rich=0 border=0 alt=\"Click to learn more...\" width=468 height=60></A>");
-</script><a href="http://servedby.advertising.com/click/site=180/bnum=79720960" target="_blank"><img src="http://servedby.advertising.com/size=468060/site=180/bnum=79720960/bins=1/rich=0" border="0" alt="Click to learn more..." width="468" height="60"></a>
+</script><a href="http://servedby.advertising.com/click/site=180/bnum=77827564" target="_blank"><img src="http://servedby.advertising.com/size=468060/site=180/bnum=77827564/bins=1/rich=0" border="0" alt="Click to learn more..." width="468" height="60"></a>
 <!-- ---------- Copyright 2000, Advertising.com ---------- -->
 <br>
 <img src="/grfx/header.ca.main.trimmed.gif" border="0" width="506" height="14" usemap="#top nav">
@@ -38,13 +38,13 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
  mydt = new Date()
  mm = mydt.getMonth()
  dd = mydt.getDate()
- var dtxt = months[mm] + " " + dd + ", 2001"
+ var dtxt = months[mm] + " " + dd + ", 2002"
 //--> End
 </script>
 <table width="630" border="0" cellspacing="0" cellpadding="2" bgcolor="#008661">
  <tbody><tr>
   <td width="430"><font face="Arial" size="2" color="#FFFF00"><b>&nbsp;The Definitive site on Astrology</b></font></td>
-  <td width="200" align="right"><font face="Verdana" size="2" color="#FFFFFF"><b><script language="JavaScript">document.write(dtxt)</script>February 24, 2001</b>&nbsp;</font></td>
+  <td width="200" align="right"><font face="Verdana" size="2" color="#FFFFFF"><b><script language="JavaScript">document.write(dtxt)</script>February 19, 2002</b>&nbsp;</font></td>
  </tr>
 
 </tbody></table>
@@ -68,7 +68,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
      <td colspan="2">
       <font face="Arial" size="2">
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../">Astrology</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
-       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../healthcare/">Healthcare</a> <font color="#ffff00"><b><i>New!</i></b></font><img src="/grfx/spacer.gif" width="1" height="16"><br>
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../healthcare/">Healthcare</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <br>
       </font>
      </td>
@@ -108,6 +108,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
      <td></td>
      <td colspan="2">
       <font face="Arial" size="2">
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/vedicremedy/">Vedic Remedy</a> <font color="#ffff00"><b><i>New!</i></b></font><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/romance.asp">Romantic Compatibilty</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/num.asp">Numerology</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/iching.asp">I Ching</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
@@ -115,7 +116,25 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/horo.preds.asp">Zodiac Predictions</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../articles/default.asp">Articles &amp; Features</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="http://mail.clubcyberastro.com/" target="_blank">Get a free email id</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
-       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="http://cyberastro.usagreetings.com/" target="_blank">Send a e-greeting</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
+       <br>
+      </font>
+     </td>
+    </tr>
+
+    <tr bgcolor="#CCCCCC"><td colspan="3"><img src="/grfx/spacer.gif" width="1" height="1"></td></tr>
+    <tr bgcolor="#C63021">
+     <td>&nbsp;</td>
+     <td><font face="Verdana" size="2" color="#FFFFFF"><b>Yantras</b></font></td>
+     <td></td>
+    </tr>
+    <tr bgcolor="#000000"><td colspan="3"><img src="/grfx/spacer.gif" width="1" height="1"></td></tr>
+    <tr>
+     <td></td>
+     <td colspan="2">
+      <font face="Arial" size="2">
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/yantra/shri/">Shri Yantra</a> <font color="#ffff00"><b><i>New!</i></b></font><img src="/grfx/spacer.gif" width="1" height="16"><br>
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/yantra/kama/">Kama Yantra</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/yantra/surya/">Surya Yantra</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <br>
       </font>
      </td>
@@ -132,7 +151,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
      <td></td>
      <td colspan="2">
       <font face="Arial" size="2">
-       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/form.passion.asp">Passion Profile</a> <font color="#ffff00"><b><i>New!</i></b></font><img src="/grfx/spacer.gif" width="1" height="16"><br>
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/form.passion.asp">Passion Profile</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/form.kundali.asp">The Match Maker</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/form.oracle.asp">Your Personal Oracle</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../online/form.prof.asp">Professional Report</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
@@ -153,6 +172,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
      <td></td>
      <td colspan="2">
       <font face="Arial" size="2">
+       <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/pred.personalised.asp">Your Year 2002</a> <font color="#ffff00"><b><i>New!</i></b></font><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/business.success.asp">Business Success</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/career.report.asp">Career Report</a><img src="/grfx/spacer.gif" width="1" height="16"><br>
        <img src="/grfx/dot.plus.gif" width="5" height="5" vspace="2" hspace="4"><a href="../products/life.together.asp">Life Together</a><img src="grfx/spacer.gif" width="1" height="16"><br>
@@ -246,9 +266,9 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
       Our server and statistics server capture information to gather broad demographic information that is not personal. We track the IP address of visitors to the site to find out demographically which parts of the world our traffic comes from. We collect browser types used and access times to analyze trends, administer the site, track users movements within the site to find out what services are most appealing. All of this information is used for gathering broad demographic data to enhance the performance and services of the site.<br><br>
       <b>Through Order Forms</b><br><br>
       For our paid personalized services we gather basically the information needed for fulfillment of the service. This is held in strict confidence, as explained earlier. We guarantee complete confidentiality of our members’ identity, horoscope details and the prediction details. Cyber Astro, Inc. further guarantees that no direct or indirect use will be made by Cyber Astro about any aspect of life, as revealed in the horoscope of a member, except for the explicit purpose of communicating the horoscope charts and predictions back to the member.<br><br>
-      For payment of the paid services, we use an independent secure server company, Internet Billing Company, based in Florida. Your credit card information, as well as your address for address verification is collected by this company on their website and Cyber Astro, Inc. has no access to this information.<br><br>
+      For payment of the paid services, we use two independent secure server companies, Bank Card USA for International Cards and Payseal of ICICI Bank Ltd. for Indian Credit cards. Your credit card information, as well as your address for address verification is collected by this company on their website and Cyber Astro, Inc. has no access to this information.<br><br>
       <b>Other information that we may collect</b><br><br>
-      Any other information we have may for you come from actual email or other contact you may have made with us in regard to specific services or products. As a general rule, these are not made part of your member profile, and are used only to address your specific need or concern that you may have communicated to us on. Although we give you the option to tell your friends about our site, we do not monitor or keep any record of friends you may contact. Information gathered on our “Affiliate with Us”, is used primarily for a Business-to-Business purpose and to encourage inquiries from other web sites that might be interested in obtaining our Astrology Content for their own site. Information from “Advertise with Us” similarly is used to generate interest in other sites or companies that may wish to purchase banner advertising on our site.<br><br>
+      Any other information we may have for you, comes from actual email or other contact you may have made with us in regard to specific services or products. As a general rule, these are not made part of your member profile, and are used only to address your specific need or concern that you may have communicated to us on. Although we give you the option to tell your friends about our site, we do not monitor or keep any record of friends you may contact. Information gathered on our “Affiliate with Us”, is used primarily for a Business-to-Business purpose and to encourage inquiries from other web sites that might be interested in obtaining our Astrology Content for their own site. Information from “Advertise with Us” similarly is used to generate interest in other sites or companies that may wish to purchase banner advertising on our site.<br><br>
       <div align="right"><a href="#top">Top</a>&nbsp;</div><br>
 
       <a name="use"></a><font size="3"><b>How do we use this information?</b></font><br><br>
@@ -276,7 +296,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
       <div align="right"><a href="#top">Top</a>&nbsp;</div><br>
 
       <a name="comn"></a><font size="3"><b>What communications do we send you?</b></font><br><br>
-      At the current time we send out an automatic Welcome letter from the site when you enroll as a member with your user name and password so that you may use it as a reference in the future. There is no other formal communication program in place currently, and we only respond to your specific queries. Before we start any program to communicate with you on a regular basis, for informational or promotional purposes, we will give you the option of not receiving information from us.<br><br>
+      At the current time we send out an automatic Welcome letter from the site when you enroll as a member with your user name and password so that you may use it as a reference in the future. Additionaly, we send you email for your personalized monthly astrological signatures and information regarding new products and services, from time to time. You are provided with an option to unsubscribe from this mailing list at any time. Besides these communications, we bring you special offers from our business associates on their products and services. Once again, you have an option to opt out from receiving such special offers.<br><br>
       <div align="right"><a href="#top">Top</a>&nbsp;</div><br>
 
       <a name="update"></a><font size="3"><b>How can you correct/update your membership profile or information?</b></font><br><br>
@@ -302,7 +322,7 @@ document.write("<A HREF=http://servedby.advertising.com/click/site=180/bnum=" + 
       35 (4 Bays)<br>
       Echelon Institutional Area<br>
       Sector 32<br>
-      Gurgaon - 122 022<br>
+      Gurgaon 122 002<br>
       Haryana<br>
       India<br><br>
       <a href="mailto:gautam@cyberastro.com">gautam@cyberastro.com</a><br><br>
